{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 588,
  "lineage": "05457d68-b921-eed7-9c88-6f91f8ab0d9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pyapp_node_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0beaa649c482330f7",
            "arn": "arn:aws:ec2:us-east-2:911879703342:instance/i-03c6a038622fd7b27",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "node_a",
            "id": "i-03c6a038622fd7b27",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pyappkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-099f0988e7eeca834",
            "private_dns": "ip-10-123-1-233.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.1.233",
            "public_dns": "ec2-18-217-201-69.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.201.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005003962b5ba6ffd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae5ca23747089d89",
            "tags": {
              "Name": "pyapp-node-a"
            },
            "tags_all": {
              "Name": "pyapp-node-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2ab4dd6c5a2597f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.node_a_profile",
            "aws_iam_role.ec2_dynamodb_access_role",
            "aws_key_pair.pyapp_auth",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.pyapp_public_subnet-a",
            "aws_vpc.pyapp_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pyapp_node_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0beaa649c482330f7",
            "arn": "arn:aws:ec2:us-east-2:911879703342:instance/i-083a8819713ba43a2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "node_b",
            "id": "i-083a8819713ba43a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pyappkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e768011d0c2773b4",
            "private_dns": "ip-10-123-0-78.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.123.0.78",
            "public_dns": "ec2-3-129-44-36.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.44.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020664f91a9e1f953",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1ce167651fae882",
            "tags": {
              "Name": "pyapp-node-b"
            },
            "tags_all": {
              "Name": "pyapp-node-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2ab4dd6c5a2597f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.node_b_profile",
            "aws_iam_role.ec2_dynamodb_access_role",
            "aws_key_pair.pyapp_auth",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.pyapp_public_subnet-b",
            "aws_vpc.pyapp_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pyapp_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911879703342:internet-gateway/igw-075836ca33591d522",
            "id": "igw-075836ca33591d522",
            "owner_id": "911879703342",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-03a8f71f4382f94ba"
          },
          "dependencies": [
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "pyapp_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911879703342:loadbalancer/app/pyapp-loadbalancer/639358abf22146a2",
            "arn_suffix": "app/pyapp-loadbalancer/639358abf22146a2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pyapp-loadbalancer-1346586937.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:911879703342:loadbalancer/app/pyapp-loadbalancer/639358abf22146a2",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pyapp-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-085b0808f8c55a98b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ae5ca23747089d89"
              },
              {
                "subnet_id": "subnet-0e1ce167651fae882"
              }
            ],
            "subnets": [
              "subnet-0ae5ca23747089d89",
              "subnet-0e1ce167651fae882"
            ],
            "vpc_id": "vpc-03a8f71f4382f94ba",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.pyapp_public_subnet-a",
            "aws_subnet.pyapp_public_subnet-b",
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "pyapp_front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911879703342:listener/app/pyapp-loadbalancer/639358abf22146a2/1f29a7b95ff26dd2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:911879703342:targetgroup/pyapp-lb-tg/bc11910ad4edf444",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911879703342:listener/app/pyapp-loadbalancer/639358abf22146a2/1f29a7b95ff26dd2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:911879703342:loadbalancer/app/pyapp-loadbalancer/639358abf22146a2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.pyapp_lb",
            "aws_lb_target_group.pyapp_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.pyapp_public_subnet-a",
            "aws_subnet.pyapp_public_subnet-b",
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "pyapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:911879703342:targetgroup/pyapp-lb-tg/bc11910ad4edf444",
            "arn_suffix": "targetgroup/pyapp-lb-tg/bc11910ad4edf444",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:911879703342:targetgroup/pyapp-lb-tg/bc11910ad4edf444",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pyapp-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03a8f71f4382f94ba"
          },
          "dependencies": [
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "pyapp_tg_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:911879703342:targetgroup/pyapp-lb-tg/bc11910ad4edf444-20221211150057296800000004",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:911879703342:targetgroup/pyapp-lb-tg/bc11910ad4edf444",
            "target_id": "i-03c6a038622fd7b27"
          },
          "dependencies": [
            "aws_iam_instance_profile.node_a_profile",
            "aws_iam_role.ec2_dynamodb_access_role",
            "aws_instance.pyapp_node_a",
            "aws_key_pair.pyapp_auth",
            "aws_lb_target_group.pyapp_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.pyapp_public_subnet-a",
            "aws_vpc.pyapp_vpc",
            "data.aws_ami.server_ami"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:911879703342:targetgroup/pyapp-lb-tg/bc11910ad4edf444-20221211150057138300000003",
            "port": 8000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:911879703342:targetgroup/pyapp-lb-tg/bc11910ad4edf444",
            "target_id": "i-03c6a038622fd7b27"
          },
          "dependencies": [
            "aws_iam_instance_profile.node_a_profile",
            "aws_iam_role.ec2_dynamodb_access_role",
            "aws_instance.pyapp_node_a",
            "aws_key_pair.pyapp_auth",
            "aws_lb_target_group.pyapp_tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.pyapp_public_subnet-a",
            "aws_vpc.pyapp_vpc",
            "data.aws_ami.server_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-075836ca33591d522",
            "id": "r-rtb-0ce05877ad4e4e2ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce05877ad4e4e2ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pyapp_internet_gateway",
            "aws_route_table.pyapp_public_rt",
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pyapp_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911879703342:route-table/rtb-0ce05877ad4e4e2ca",
            "id": "rtb-0ce05877ad4e4e2ca",
            "owner_id": "911879703342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075836ca33591d522",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a8f71f4382f94ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cb5ab6e56a34001",
            "route_table_id": "rtb-0ce05877ad4e4e2ca",
            "subnet_id": "subnet-0ae5ca23747089d89"
          },
          "dependencies": [
            "aws_route_table.pyapp_public_rt",
            "aws_subnet.pyapp_public_subnet-a",
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c01b80144a36a3ba",
            "route_table_id": "rtb-0ce05877ad4e4e2ca",
            "subnet_id": "subnet-0e1ce167651fae882"
          },
          "dependencies": [
            "aws_route_table.pyapp_public_rt",
            "aws_subnet.pyapp_public_subnet-b",
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911879703342:security-group/sg-085b0808f8c55a98b",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085b0808f8c55a98b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "911879703342",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03a8f71f4382f94ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911879703342:security-group/sg-0b2ab4dd6c5a2597f",
            "description": "Ec2 Sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2ab4dd6c5a2597f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all for port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "ALB SG Allow for EC2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-085b0808f8c55a98b"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "911879703342",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03a8f71f4382f94ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pyapp_public_subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911879703342:subnet/subnet-0ae5ca23747089d89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae5ca23747089d89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911879703342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-a"
            },
            "tags_all": {
              "Name": "dev-public-a"
            },
            "vpc_id": "vpc-03a8f71f4382f94ba"
          },
          "dependencies": [
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pyapp_public_subnet-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911879703342:subnet/subnet-0e1ce167651fae882",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.123.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1ce167651fae882",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911879703342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public-b"
            },
            "tags_all": {
              "Name": "dev-public-b"
            },
            "vpc_id": "vpc-03a8f71f4382f94ba"
          },
          "dependencies": [
            "aws_vpc.pyapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pyapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:911879703342:vpc/vpc-03a8f71f4382f94ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0e3210087824f5cd1",
            "default_route_table_id": "rtb-09dc40bf35c03216e",
            "default_security_group_id": "sg-05257eb835c083941",
            "dhcp_options_id": "dopt-0c321b3e6a488fa61",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a8f71f4382f94ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09dc40bf35c03216e",
            "owner_id": "911879703342",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}